--- a/src/components/custom_card.marko
+++ b/src/components/custom_card.marko
@@ -1,5 +1,5 @@
 import type { Repo } from "../libs/types_important";
-import { formatNumber } from "../libs/functions_important";
+import { formatNumber, RepoUrl, ServerName } from "../libs/functions_important";
 export interface Input {
   Card_Details: Repo;
   section: string;
@@ -11,7 +11,7 @@ div [
 ]
   div.flex.h-full.flex-col.justify-center.gap-4.p-6
     img.w-10.rounded-full [
-      src=(input.Card_Details.avatar_url + "&size=40")
+      src=(input.Card_Details.avatar_url)
       alt="misshod"
     ]
     span class="truncate text-2xl font-bold text-gray-900 dark:text-white"
@@ -62,7 +62,7 @@ div [
           -- fork
     if(input.section === "packages")
       a [
-        href=("/packages/" + input.Card_Details.full_name)
+        href=("/programs/" + input.Card_Details.server + "/" + input.Card_Details.full_name)
         type="button"
         class=":ring-cyan-700 group relative flex items-stretch justify-center rounded-full border border-gray-200 bg-white p-0.5 text-center font-medium text-gray-900 transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:text-cyan-700 focus:outline-none focus:ring-4 enabled:hover:bg-gray-100 enabled:hover:text-cyan-700 dark:border-gray-600 dark:bg-transparent dark:text-gray-400 dark:enabled:hover:bg-gray-700 dark:enabled:hover:text-white"
       ]
@@ -70,7 +70,7 @@ div [
           -- View package
     if(input.section === "programs")
       a [
-        href=("/programs/" + input.Card_Details.full_name)
+        href=("/programs/" + input.Card_Details.server + "/" + input.Card_Details.full_name)
         type="button"
         class=":ring-cyan-700 group relative flex items-stretch justify-center rounded-full border border-gray-200 bg-white p-0.5 text-center font-medium text-gray-900 transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:text-cyan-700 focus:outline-none focus:ring-4 enabled:hover:bg-gray-100 enabled:hover:text-cyan-700 dark:border-gray-600 dark:bg-transparent dark:text-gray-400 dark:enabled:hover:bg-gray-700 dark:enabled:hover:text-white"
       ]
@@ -78,19 +78,19 @@ div [
           -- View program
     if(input.section === "special-package")
       a [
-        href=("https://github.com/" + input.Card_Details.full_name)
+        href=(RepoUrl(input.Card_Details))
         target="_blank"
         type="button"
         class=":ring-cyan-700 group relative flex items-stretch justify-center rounded-full border border-gray-200 bg-white p-0.5 text-center font-medium text-gray-900 transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:text-cyan-700 focus:outline-none focus:ring-4 enabled:hover:bg-gray-100 enabled:hover:text-cyan-700 dark:border-gray-600 dark:bg-transparent dark:text-gray-400 dark:enabled:hover:bg-gray-700 dark:enabled:hover:text-white"
       ]
         span.flex.items-stretch.rounded-md.px-4.py-2.text-sm.transition-all.duration-200
-          -- View package on GitHub
+          -- View package on ${ServerName(input.Card_Details)}
     if(input.section === "special-program")
       a [
-        href=("https://github.com/" + input.Card_Details.full_name)
+        href=(RepoUrl(input.Card_Details))
         target="_blank"
         type="button"
         class=":ring-cyan-700 group relative flex items-stretch justify-center rounded-full border border-gray-200 bg-white p-0.5 text-center font-medium text-gray-900 transition-[color,background-color,border-color,text-decoration-color,fill,stroke,box-shadow] focus:z-10 focus:text-cyan-700 focus:outline-none focus:ring-4 enabled:hover:bg-gray-100 enabled:hover:text-cyan-700 dark:border-gray-600 dark:bg-transparent dark:text-gray-400 dark:enabled:hover:bg-gray-700 dark:enabled:hover:text-white"
       ]
         span.flex.items-stretch.rounded-md.px-4.py-2.text-sm.transition-all.duration-200
-          -- View program on GitHub
+          -- View program on ${ServerName(input.Card_Details)}
