--- a/src/routes/programs/$server/$user_name/$repo_name/+page.marko
+++ b/src/routes/programs/$server/$user_name/$repo_name/+page.marko
@@ -4,9 +4,9 @@ import { fetchReadmeContent } from "@functions";
 import zon2json from "z2j";
 $ const repoPromise: Promise<Repo> = new Promise(async (resolve, reject) => {
   const repositories = [...database.programs];
-  const { user_name, repo_name } = $global.params;
+  const { server, user_name, repo_name } = $global.params;
   const repoPath = `${user_name}/${repo_name}`;
-  const repository = repositories.find((repo) => repo.full_name === repoPath);
+  const repository = repositories.find((repo) => repo.full_name === repoPath && repo.server === parseInt(server));
 
   if (!repository) {
     return reject("/404");
@@ -57,6 +57,7 @@ $ const repoPromise: Promise<Repo> = new Promise(async (resolve, reject) => {
   }
 
   const compressedRepo: Repo = {
+    server: repository.server,
     contentIsCorrect: true,
     name: repository.name,
     full_name: repository.full_name,
